# Sudoku-qt

./: .gitignore  README.md  pyproject.toml  sudoku.py
docs/superpowers/plans/: 2026-03-16-sudoku-qt.md  2026-03-20-ui-redesign.md  2026-03-26-hint-explanations.md
docs/superpowers/specs/: 2026-03-16-sudoku-qt-design.md  2026-03-20-ui-redesign-design.md  2026-03-26-hint-explanations-design.md  2026-03-26-technique-validated-generator-design.md
src/: board.py  controls.py  difficulty_bar.py  game.py  generator.py  main.py  stats.py  styles.py
sudoku/: board.py  controls.py  difficulty_bar.py  game.py  generator.py  main.py  solver.py  stats.py  styles.py
