[project]
name = "sudoku-qt"
version = "0.1.0"
description = "Sudoku-Spiel mit PySide6"
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sudoku"]

[project.scripts]
sudoku = "sudoku.main:main"

